# typhoon-day-research

./: .gitignore  README.md  pyproject.toml
data/manual/: election_calendar.csv  taipei_typhoon_week_scenario.csv
data/processed/: cwa_wpps_forecast.csv  dgpa_decisions.csv  dgpa_sample_decisions.csv
data/raw/cwa/: WPPS-Data.js
data/raw/dgpa/: history_page_01.html  history_page_02.html  history_page_03.html  history_page_04.html  history_page_05.html  history_page_06.html  history_page_07.html  history_page_08.html  history_page_09.html  history_page_10.html  history_page_11.html  history_page_12.html  history_page_13.html  history_page_14.html  history_page_15.html  history_page_16.html  history_page_17.html  history_page_18.html  history_page_19.html  history_page_20.html  history_page_21.html  history_page_22.html  (+28 more)
docs/: research_brief.md
reports/: self_review.md
reports/analysis/: election_timing.csv  election_timing.md  interesting_findings.md  summary.md
reports/analysis_sample/: summary.md
reports/articles/: 01-typhoon-day-science.md  02-standards-history.md  03-election-years.md  04-county-ranking.md  05-prediction-model.md  README.md  series_index.md
reports/medium/: 03-election-years.md  04-county-ranking.md  05-prediction-model.md
scripts/: render_extra_charts.py
src/typhoon_day_research/: __init__.py  cli.py  models.py  pipeline.py
tests/: test_baseline_model.py  test_dgpa_parser.py  test_dgpa_source.py  test_election_analysis.py  test_election_features.py  test_medium_articles.py  test_sample_pipeline.py  test_wpps_parser.py
(+1214 files in other folders)
